--- a/Designs/Design-2/code/style.css
+++ b/Designs/Design-2/code/style.css
@@ -80,7 +80,8 @@ body {
   font-size: 15px;
   height: 1.9rem;
   width: 4.2rem;
-  vertical-align: top;
+  vertical-align: middle;
+  text-align: -webkit-center;
 }
 
 @media (min-width: 668px) {
