--- a/Designs/Design-2/code/style.css
+++ b/Designs/Design-2/code/style.css
@@ -60,7 +60,7 @@ body {
   border: 1px solid var(--text-color);
   border-radius: 5px;
   height: 1.7rem;
-  width: 14rem;
+  width: 12rem;
 }
 
 .search-bar:focus,
@@ -77,9 +77,9 @@ body {
   border-radius: 5px;
   background: var(--text-color);
   color: white;
-  font-size: 1rem;
+  font-size: .8rem;
   height: 1.9rem;
-  width: 4.2rem;
+  width: 4rem;
   vertical-align: middle;
 }
 
