--- a/Designs/Design-2/code/style.css
+++ b/Designs/Design-2/code/style.css
@@ -17,7 +17,7 @@ body {
 }
 
 .weather-app {
-  margin: 2rem 3rem 0 2.5rem;
+  margin: 1.9rem 3rem 0 2.5rem;
 }
 
 .weather-desc-temp,
@@ -32,12 +32,13 @@ body {
 }
 
 .weather-icon {
-  width: 6.5rem;
+  margin-top: 0.2rem;
+  width: 6.4rem;
 }
 
 .weather-message {
-  margin: 1.6rem 0;
-  font-size: 1.7rem;
+  margin: 1rem 0 1.5rem;
+  font-size: 1.8rem;
 }
 
 .fc-day-container {
@@ -47,20 +48,20 @@ body {
 }
 
 .fc-day-temp {
-  font-size: 1.1rem;
+  font-size: 1.2rem;
   margin: 0;
-  padding: 0.5rem 0 0.1rem 0;
+  padding: 0.6rem 0 0.1rem 0;
 }
 
 .search {
-  margin-top: 2.3rem;
+  margin-top: 2.1rem;
 }
 
 .search-bar {
   border: 1px solid var(--text-color);
   border-radius: 5px;
   height: 1.7rem;
-  width: 12rem;
+  width: 14rem;
 }
 
 .search-bar:focus,
@@ -77,9 +78,10 @@ body {
   border-radius: 5px;
   background: var(--text-color);
   color: white;
-  font-size: .8rem;
+  font-size: 0.9rem;
   height: 1.9rem;
-  width: 4rem;
+  width: 4.2rem;
+  text-align: left;
   vertical-align: middle;
 }
 
@@ -94,10 +96,11 @@ body {
   }
 
   .weather-message {
+    font-size: 1.8rem;
     margin: 2rem 0 1rem;
   }
 
-  .fc-day-temp { 
+  .fc-day-temp {
     padding: 1.7rem 0 0.2rem 0;
   }
 
