--- a/Designs/Design-2/code/style.css
+++ b/Designs/Design-2/code/style.css
@@ -33,12 +33,12 @@ body {
 
 .weather-icon {
   margin-top: 0.2rem;
-  width: 6.4rem;
+  width: 6.3rem;
 }
 
 .weather-message {
   margin: 0.9rem 0 1.6rem;
-  font-size: 1.8rem;
+  font-size: 1.7rem;
 }
 
 .fc-day-container {
@@ -50,7 +50,7 @@ body {
 .fc-day-temp {
   font-size: 1.1rem;
   margin: 0;
-  padding: 0.6rem 0 0.1rem 0;
+  padding: 0.5rem 0 0.1rem 0;
 }
 
 .search {
@@ -61,7 +61,7 @@ body {
   border: 1px solid var(--text-color);
   border-radius: 5px;
   height: 1.7rem;
-  width: 8rem;
+  width: 9rem;
 }
 
 .search-bar:focus,
@@ -79,10 +79,9 @@ body {
   background: var(--text-color);
   color: white;
   font-size: 0.9rem;
+  margin-left: 0.1rem;
   height: 1.9rem;
   width: 4.2rem;
-  text-align: center;
-  vertical-align: middle;
 }
 
 @media (min-width: 668px) {
