--- a/Designs/Design-2/code/style.css
+++ b/Designs/Design-2/code/style.css
@@ -60,7 +60,10 @@ body {
 .search-bar {
   border: 1px solid var(--text-color);
   border-radius: 5px;
+  color: var(--text-color);
+  font-family: 'Montserrat';
   height: 1.7rem;
+  text-indent: 4px;
   width: 9rem;
 }
 
@@ -68,8 +71,6 @@ body {
 .search-bar:active,
 .search-bar::placeholder {
   color: var(--text-color);
-  font-size: 1rem;
-  text-indent: 4px;
   outline: none;
 }
 
@@ -78,7 +79,7 @@ body {
   border-radius: 5px;
   background: var(--text-color);
   color: white;
-  font-size: 0.9rem;
+  font-size: 0.8rem;
   margin-left: 0.1rem;
   height: 1.9rem;
   width: 4.2rem;
@@ -109,4 +110,4 @@ body {
   
   .search-bar {
     width: 14rem;
-}
+  }
